--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/5b9136bb21.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/92b88ff8f4.js" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Jakub Donovan</title>
 </head>
+
 <body>
     <script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
 
@@ -24,6 +25,10 @@
         <section class="scroll-slide" id="home">
             <div id="typewriter"></div>
             <script src="assets/javascript/typeit.js"></script>
+            <ul class="socialmedia-icons">
+                <li><a href="https://github.com/jakubdonovan"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jakub-donovan-b9916715b/"><i class="fab fa-linkedin"></i></a></li>            
+            </ul>
         </section>
 
         <nav id="navbar">
@@ -70,12 +75,12 @@
 
             <div class="sub-section" id="about-skills">
                 <div class="skills">
-                    <div class="skill-icons">
+                    <ul class="skill-icons">
                         <li><i class="fab fa-html5 html5"></i></li>
                         <li><i class="fab fa-css3 css3"></i></li>
                         <li><i class="fab fa-js js"></i></li>
                         <li><i class="fab fa-python python"></i></li>
-                    </div>
+                    </ul>
                 </div>
                 <h2 class="header">I'm an expert at what I do.</h2>
             </div>
@@ -93,52 +98,59 @@
         </section>
 
         <section class="scroll-slide" id="work">
-            <h2>Projects</h2>
+            <h2 class="header">My Work</h2>
             <div class="portfolio">
                 <div class="project">
-                    <div>
+                    <div class="project-img">
                         <img src="assets/media/images/myanime.io.png" alt="">
                     </div>
                     <div class="project-info">
-                        <p>myanime.io</p>
-                        <ul>
-                            <li>HTML5</li>
-                            <li>CSS3</li>
+                        <h3 class="project-info-title">myanime.io</h3>
+                        <p class="project-info-description">Lorem ipsum dolor sit amet  laonsectetur doloribus assumenda obc.</p>
+                        <ul class="project-info-languages">
+                            <li class="html5">HTML5</li>
+                            <li class="css3">CSS3</li>
                         </ul>
                     </div>
                 </div>
                 <div class="project">
-                    <div>
+                    <div class="project-img">
                         <img src="assets/media/images/myanime.io.png" alt="">
                     </div>
                     <div class="project-info">
-                        <p>exciteme.io</p>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
+                        <h3 class="project-info-title">exciteme.io</h3>
+                        <p class="project-info-description">Lorem ipsum dolor sit amet laonsectetur doloribus assumenda obc.</p>
+                        <ul class="project-info-languages">
+                            <li class="html5">HTML5</li>
+                            <li class="css3">CSS3</li>
                         </ul>
                     </div>
                 </div>
         </section>
         
         <section class="scroll-slide" id="contact">
-            <form action="" method="post">
-                <h2>Get in touch with me!</h2>
-                <input type="text" id="fname" name="firstname" placeholder="first name">
-                <input type="text" id="lname" name="lastname" placeholder="last name">
-                <br>
-                <input type="email" id="email" name="email" placeholder="email address"> 
-                <br>
-                <input type="text" id="subject" name="subject" placeholder="subject">
-                <br>
-                <input type="textarea" rows="5" id="enquiry" name="enquiry" placeholder="How can I help?">
-                <br>
-                <input type="submit" id="submit" value="Submit">
-            </form>
+            <h2 class="header">Get in touch with me!</h2>
+            <div class="form-container">
+                <form action="mailto:jakubdonovan@protonmail.com" method="post" name="emailform">
+                    <input type="text" id="name" name="name" placeholder="name" required>
+                    <input type="email" id="email" name="email" placeholder="email address" required> 
+                    <br>
+                    <input type="text" id="subject" name="subject" placeholder="subject" required>
+                    <br>
+                    <input type="textarea" id="message" name="message" placeholder="How can I help?" required>
+                    <br>
+                    <input type="submit" id="submit" value="Submit" required>
+                </form>
+            </div>
+
         </section>
-
+        
         <footer>
-
+            <p>© 2020 Jakub Donovan. All rights reserved.</p>
+            <ul class="socialmedia-icons">
+                <li><a href="https://github.com/jakubdonovan"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jakub-donovan-b9916715b/"><i class="fab fa-linkedin"></i></a></li>
+            </ul>
         </footer>
     </div>
 </body>
