Removed the problematic scroll-snap-type: y mandatory and implemented a js based solution (Does not work yet as it requires a license. I applied and I'm still waiting to receive the license key.) Added finishing touches to my stylesheet as well as the html document. Updated readme.md.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/92b88ff8f4.js" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.extensions.min.js"></script> Applied and waiting for my free use lisense. Will finish implementing on delivery. -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Jakub Donovan</title>
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
-
-    <!-- TODO: Finish using JS in v2
-    <nav id="sidenav">
-        <ul>
-            <li class="sidenav-item"><a href="#home">01</a></li>
-            <li class="sidenav-item"><a href="#about">02</a></li>
-            <li class="sidenav-item"><a href="#projects">03</a></li>
-            <li class="sidenav-item"><a href="#contect">04</a></li>
-        </ul>
-    </nav> -->
-
     <div id="scroll-container">
+        <!-- <script src="assets/javascript/fullpage.js"></script> Applied and waiting for my free use lisense. Will finish implementing on delivery. -->
 
         <section class="scroll-slide" id="home">
             <div id="typewriter"></div>
             <script src="assets/javascript/typeit.js"></script>
+
             <ul class="socialmedia-icons">
-                <li><a href="https://github.com/jakubdonovan"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/jakub-donovan-b9916715b/"><i class="fab fa-linkedin"></i></a></li>            
+                <li><a href="https://github.com/jakubdonovan" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jakub-donovan-b9916715b/" target="_blank"><i class="fab fa-linkedin"></i></a></li>            
             </ul>
         </section>
 
@@ -148,8 +140,8 @@
         <footer>
             <p>© 2020 Jakub Donovan. All rights reserved.</p>
             <ul class="socialmedia-icons">
-                <li><a href="https://github.com/jakubdonovan"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/jakub-donovan-b9916715b/"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/jakubdonovan" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jakub-donovan-b9916715b/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </footer>
     </div>
