Fixed some html syntax errors.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!DOCTYPE html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -118,6 +118,7 @@
                         </ul>
                     </div>
                 </div>
+            </div>
         </section>
         
         <section class="scroll-slide" id="contact">
@@ -129,7 +130,7 @@
                     <br>
                     <input type="text" id="subject" name="subject" placeholder="subject" required>
                     <br>
-                    <input type="textarea" id="message" name="message" placeholder="How can I help?" required>
+                    <textarea form="emailform" id="message" name="message" placeholder="How can I help?" required></textarea>
                     <br>
                     <input type="submit" id="submit" value="Submit" required>
                 </form>
