Added the a testing section and updated the readme.md accordingly

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <br>
                     <textarea form="emailform" id="message" name="message" placeholder="How can I help?" required></textarea>
                     <br>
-                    <input type="submit" id="submit" value="Submit" required>
+                    <input type="submit" id="submit" value="Submit">
                 </form>
             </div>
 
