Added a new project to the Work section. Added a wireframe to the repository. Fixed the testmatrix link in the readme.md. Added user stories to the readme.md. And other small changes to the readme.md.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="project-info">
                         <h3 class="project-info-title">myanime.io</h3>
-                        <p class="project-info-description">Lorem ipsum dolor sit amet  laonsectetur doloribus assumenda obc.</p>
+                        <p class="project-info-description">Watch your favourite anime in HD with no ads.</p>
                         <ul class="project-info-languages">
                             <li class="html5">HTML5</li>
                             <li class="css3">CSS3</li>
@@ -108,14 +108,15 @@
                 </div>
                 <div class="project">
                     <div class="project-img">
-                        <img src="assets/media/images/myanime.io.png" alt="">
+                        <img src="assets/media/images/exciteme.io.png" alt="">
                     </div>
                     <div class="project-info">
                         <h3 class="project-info-title">exciteme.io</h3>
-                        <p class="project-info-description">Lorem ipsum dolor sit amet laonsectetur doloribus assumenda obc.</p>
+                        <p class="project-info-description">Having a stressful day? Pick and emotion, click play, lay back, and enjoy.</p>
                         <ul class="project-info-languages">
                             <li class="html5">HTML5</li>
                             <li class="css3">CSS3</li>
+                            <li class="js">JavaScript</li>
                         </ul>
                     </div>
                 </div>
@@ -126,17 +127,13 @@
             <h2 class="header">Get in touch with me!</h2>
             <div class="form-container">
                 <form action="mailto:jakubdonovan@protonmail.com" method="post" name="emailform">
-                    <input type="text" id="name" name="name" placeholder="name" required>
-                    <input type="email" id="email" name="email" placeholder="email address" required> 
-                    <br>
-                    <input type="text" id="subject" name="subject" placeholder="subject" required>
-                    <br>
-                    <textarea form="emailform" id="message" name="message" placeholder="How can I help?" required></textarea>
-                    <br>
+                    <input type="text" id="name" name="name" placeholder="name" required><br>
+                    <input type="email" id="email" name="email" placeholder="email address" required> <br>
+                    <input type="text" id="subject" name="subject" placeholder="subject" required><br>
+                    <textarea id="message" name="message" placeholder="How can I help?" required></textarea><br>
                     <input type="submit" id="submit" value="Submit">
                 </form>
             </div>
-
         </section>
         
         <footer>
